# 022-10074

./: check_output.txt  generate_samples.py  pyproject.toml  requirements.txt  run.bat  整改清单_20260622_004909.csv  旁站检查报告_20260622_003111.txt  旁站检查报告_20260622_003111.xlsx  旁站检查报告_20260622_004909.txt  旁站检查报告_20260622_004909.xlsx
reports/: 上周整改清单_已回填.csv  周报汇总_20260622_010636.csv  周报汇总_20260622_010636.xlsx  周报汇总_20260622_013714.csv  周报汇总_20260622_013714.xlsx  整改清单_20260622_003132.txt  整改清单_20260622_004839.csv  整改清单_20260622_005001.csv  整改清单_20260622_010657.csv  整改清单_20260622_013820.csv  旁站检查报告_20260622_003253.txt  旁站检查报告_20260622_003253.xlsx  旁站检查报告_20260622_003401.txt  旁站检查报告_20260622_003401.xlsx  旁站检查报告_20260622_004838.txt  旁站检查报告_20260622_004838.xlsx  趋势报告_20260622_014005.csv  问题跟踪周报_20260622_010841.csv  问题跟踪周报_20260622_014058.csv
src/concrete_inspector/: __main__.py  cli.py  filters.py  history.py  models.py  reporter.py  rules.py  scanner.py  tracker.py  validator.py
示例工作流输出/: W1_整改.csv  W1_整改_已回填.csv  W2_滚动整改_已回填.csv  W2_跟踪报告.csv  W3_周报.csv  W3_周报.xlsx
示例项目_阳光花园二期/: inspection_rules.json  浇筑清单.csv
示例项目_阳光花园二期/20240102_1号楼_二层梁板(缺少强度等级)/: 1号楼_20240102_旁站日志.txt
示例项目_阳光花园二期/20240105_5号楼_C45(多字段缺失)/: 5号楼_20240105_旁站日志.txt
示例项目_阳光花园二期/20240106_2号楼_地下室负一层墙板_C30P6(一致性冲突-楼栋不一致)/: 2号楼_20240106_旁站日志.txt
示例项目_阳光花园二期/20240107_5号楼_四层梁板柱_C40(一致性冲突-部位不一致)/: 5号楼_20240107_旁站日志.txt
示例项目_阳光花园二期/20240109_1号楼_三层柱墙_C45(一致性冲突-监理员不一致)/: 1号楼_20240109_旁站日志.txt
示例项目_阳光花园二期/20240109_2号楼_五层基础承台_C45(照片时间早于浇筑3天)/: 2号楼_20240109_旁站日志.txt
(+11 files in other folders)
